deployments/vLLM/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vllm-inference
  namespace: vllm
spec:
  parentRefs:
    - name: cluster-gw # kpt-set: ${shared-gateway-name}
      namespace: shared-services # kpt-set: ${shared-gateway-namespace}
      sectionName: arcadia # kpt-set: ${shared-gateway-section-name}
  rules:
    - name: gemma-3
      matches:
        - headers:
          - name: X-Gateway-Model-Name
            type: Exact
            value: google/gemma-3-4b-it
          path:
            type: PathPrefix
            value: /v1/completions
      backendRefs:
        - name: gemma-3-4b-it
          group: inference.networking.k8s.io
          kind: InferencePool
    - name: llama-3
      matches:
        - headers:
          - name: X-Gateway-Model-Name
            type: Exact
            value: meta-llama/Llama-3.1-8B
          path:
            type: PathPrefix
            value: /v1/completions
      backendRefs:
        - name: llama-3-1-8b
          group: inference.networking.k8s.io
          kind: InferencePool
